package com.practice.domain.prepare;

public enum Mark {
    SPADE,
    DIAMOND,
    CLOVER,
    HEART
}
