@startuml
'https://plantuml.com/sequence-diagram

skinparam defaultFontName Cica

package domain.play {
    class PlayField{
        -player : Player
        -dealer : Dealer
        -deck : Deck
    }

    class Dealer {
        -hand : Hand
        --
        +draw(deck:Deck) : Hand
    }

    class Player {
        -hand : Hand
        --
        +draw(deck:Deck) : Hand
        +open() : Hand
    }

    class Hand {
        -cards : List<Card>
    }

    class Card {
        -number : Number
        -mark : Mark
        --
        +getContent():String
    }

    interface IPlayService {
        --
        hit(playField:PlayField):Card
    }

    Hand "1" --o "1" Player
    Hand "1" --o "1" Dealer
    Card "2..." --o "1" Hand

    class Number {
        -value : int
    }

    enum Mark {
        SPADE
        DIAMOND
        CLOVER
        HEART
    }

    Mark "1" --o "1" Card
    Number "1" --o "1" Card

    class Deck {
        -cards : List<Card>
        --
        +pop() : Card
    }

    Card "0...48" --o "1" Deck
}
@enduml